# Brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: __init__.py  brain.py  calc.py  even.py  gcd.py  prime.py  progres.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_progression.py
yuliazzz_brain_games.egg-info/: PKG-INFO  SOURCES.txt
